fix: added insensitive name search for user and filter by inactive
